--- a/templates/base.html
+++ b/templates/base.html
@@ -9,14 +9,17 @@
 
     <title>{% block title %}{% endblock %}</title>
   </head>
-  <body>
+  <body class="grey lighten-4">
     {% include "nav.html" %}
     <div class="container">
       {% block container %}
       {% endblock %}
     </div>
     <script src="{% static 'js/materialize.min.js' %}"></script>
-    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
     {% block scripts %}
     {% endblock scripts %}
   </body>
