--- a/templates/users/base.html
+++ b/templates/users/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% load static %}
     <link rel="stylesheet" href="{% static 'css/materialize.min.css' %}">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>{% block title %}{% endblock %}</title>
   </head>
   <body class="grey lighten-4">
@@ -13,5 +14,11 @@
       {% endblock %}
     </div>
     <script src="{% static 'js/materialize.min.js' %}"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.min.js"
+      integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+      crossorigin="anonymous"></script>
+    {% block scripts %}
+    {% endblock scripts %}
   </body>
 </html>
