--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -17,18 +17,27 @@
         <div class="row">
           {% csrf_token %}
           <div class="input-field col s12">
-            <input type="text" placeholder="Username" name="username" id="username" class="validate"/>
+            <input type="text" name="username" id="username" class="validate"/>
             <label class="active" for="username">Username</label>
           </div>
           <div class="input-field col s12">
-            <input type="password" placeholder="Password" name="password" id="password" class="validate"/>
+            <input type="password" name="password" id="password" class="validate"/>
             <label for="password">Password</label>
           </div>
-          <button name="submit">sign in</button>
+          <div class="input-field col s12">
+            <button class="btn waves-effect waves-light col s12 light-blue accent-4" type="submit" name="action">Sign In!
+              <i class="material-icons right">send</i>
+            </button>            
+          </div>
         </div>
       </form>
     </div>
   </div>
 {% endblock %}
 {% block scripts %}
+<script>
+    $(document).ready(function() {
+    M.updateTextFields();
+  });
+</script>
 {% endblock scripts %}
