--- a/templates/home.html
+++ b/templates/home.html
@@ -14,8 +14,8 @@
             Aquí puedes encontrar los posts de tus amigos y todas esas weas.</p>
         </div>
         <div class="card-action">
-          <a href="#"><strong>Login</strong></a>
-          <a href="#" class="right"><strong>Sign up</strong></a>
+          <a href="{% url "login" %}"><strong>Login</strong></a>
+          <a href="{% url "sign_up" %}" class="right"><strong>Sign up</strong></a>
         </div>
       </div>
     </div>
