--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,18 +5,21 @@
       <div class="nav-wrapper">
         <div class="row">
           <div class="col s1">
-            <a href="#" class="brand-logo">
+            <a href="{% url "posts" %}" class="brand-logo">
               <img src="{% static 'asets/instagram.png' %}" alt="Platzigram" height="30">
             </a>
           </div>          
         <ul id="nav-mobile" class="hide-on-med-and-down">
           <li>
-            <a href="#" class="" style="padding: 0px 15px;">
+            <a href="{% url "edit_user" %}">
               <i class="material-icons">
-                <img src="{% static 'asets/default-profile.png' %}" alt="" height="30" class="material-icons">
+                {% if  user.profile.picture %}
+                  <img src="{{user.profile.picture.url}}" alt="" height="30" class="circle material-icons">                  
+                {% else %}
+                  <img src="{% static 'asets/default-profile.png' %}" alt="" height="30" class="material-icons">                
+                {% endif %}
               </i>
-              
-            </a>      
+            </a>
           </li>
           <li><a href="{% url "logout" %}"><i class="material-icons black-text">exit_to_app</i></a></li>
           <li><a href="/admin" class="black-text">Admin</a></li>
