agrego validaciones y vistas para crear un nuevo post utilizando ModelForm

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,7 @@
 {% load static %}
 {% block container %}
   <div class="row">
-    <br><br><br><br><br><br><br><br>
-    <div class="col s12 m6 offset-m3">
+    <div class="col s12 m6 offset-m3" style="margin-top:3rem;">
       <div class="card">
         <div class="card-content">
           <p class="center-align">
