--- a/templates/base.html
+++ b/templates/base.html
@@ -14,12 +14,41 @@
     <div class="container">
       {% block container %}
       {% endblock %}
+    <div class="fixed-action-btn hide-on-large-only">
+      <a class="btn-floating btn-large red">
+        <i class="large material-icons">menu</i>
+      </a>
+      <ul>
+        <li><a class="btn-floating" href="{% url "edit_user" %}"><i class="material-icons">
+          {% if  user.profile.picture %}
+            <img src="{{user.profile.picture.url}}" class="circle responsive-img">
+          {% else %}
+            account_circle              
+          {% endif %}
+        </i>
+        </a></li>
+        <li><a class="btn-floating red" href="{% url "logout" %}"><i class="material-icons">exit_to_app</i></a></li>
+        <li><a class="btn-floating yellow darken-1" href="{% url "create_post" %}"><i class="material-icons">add_a_photo</i></a></li>
+        {% if user.is_staff %}
+          <li><a class="btn-floating blue" href="/admin"><i class="material-icons">settings</i></a></li>
+        {% endif %}
+      </ul>
+    </div>
     </div>
     <script src="{% static 'js/materialize.min.js' %}"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.min.js"
       integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
       crossorigin="anonymous"></script>
+      <script>
+      document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('.fixed-action-btn');
+        var instances = M.FloatingActionButton.init(elems, {
+          direction: 'top',
+          hoverEnabled: false
+        });
+      });
+      </script>
     {% block scripts %}
     {% endblock scripts %}
   </body>
