--- a/templates/nav.html
+++ b/templates/nav.html
@@ -5,25 +5,25 @@
       <div class="nav-wrapper">
         <div class="row">
           <div class="col s1">
-            <a href="{% url "posts" %}" class="brand-logo">
+            <a href="{% url "posts:posts" %}" class="brand-logo">
               <img src="{% static 'asets/instagram.png' %}" alt="Platzigram" height="30">
             </a>
           </div>          
         <ul id="nav-mobile" class="hide-on-med-and-down">
           <li>
-            <a href="{% url "edit_user" %}">
+            <a href="{% url "users:detail" request.user.username%}">
               <i class="material-icons">
                 {% if  user.profile.picture %}
-                  <img src="{{user.profile.picture.url}}" alt="" height="30" class="circle">                  
+                  <img src="{{request.user.profile.picture.url}}" alt="" height="30" class="circle">                  
                 {% else %}
                   <img src="{% static 'asets/default-profile.png' %}" alt="" height="30" class="material-icons">                
                 {% endif %}
               </i>
             </a>
           </li>
-          <li><a href="{% url "logout" %}"><i class="material-icons black-text">exit_to_app</i></a></li>
-          <li><a href="{% url "create_post" %}"><i class="material-icons black-text">add_a_photo</i></a></li>
-          {% if user.is_staff %}
+          <li><a href="{% url "users:logout" %}"><i class="material-icons black-text">exit_to_app</i></a></li>
+          <li><a href="{% url "posts:create_post" %}"><i class="material-icons black-text">add_a_photo</i></a></li>
+          {% if request.user.is_staff %}
             <li><a href="/admin" class="black-text">Admin</a></li>
           {% endif %}
         </ul>
