--- a/templates/posts/create_post.html
+++ b/templates/posts/create_post.html
@@ -7,7 +7,7 @@
   <div class="row">
   	<div class="col s12 m6 offset-m3" style="margin-top:2rem;">
   		<h5>Create a new post</h5>
-  		<form action="{% url "create_post" %}" class="col s12" method="POST" enctype="multipart/form-data">
+  		<form action="{% url "posts:create_post" %}" class="col s12" method="POST" enctype="multipart/form-data">
   			{% csrf_token %}
   			<input type="hidden" value="{{user.pk}}" name="user">
   			<input type="hidden" value="{{profile.pk}}" name="profile">  			
