--- a/templates/users/edit_user.html
+++ b/templates/users/edit_user.html
@@ -8,7 +8,7 @@
 	<div class="col s12 m6 offset-m3 l6 offset-l3">
 		<div style="margin-top:2rem;">
 			<h5 class="right-align">@{{user.username}} | {{user.get_full_name}}</h5>
-			<form action="{% url "edit_user" %}" method="POST" enctype="multipart/form-data" class="card-content">
+			<form action="{% url "users:edit_user" %}" method="POST" enctype="multipart/form-data" class="card-content">
 				{% csrf_token %}
 			  <div class="row valign-wrapper">
 			    <div class="col s2">
