--- a/templates/posts/posts.html
+++ b/templates/posts/posts.html
@@ -4,6 +4,7 @@
   <div class="row">
     <div class="col s12 m6 offset-m3">
       {% for post in posts %}
+      {{post.pk}}
       <div class="card">
         <div class="card-action">
           <div class="row valing-wrapper">
@@ -18,11 +19,12 @@
           </div>
         </div>
         <div class="card-image">
+          <a href="{% url "posts:detail" post.id %}"></a>
           <img src="{{post.photo.url}}">
           <span class="card-title">{{post.title}}</span>
         </div>
         <div class="card-content">
-          <p>{{post.description}}</p>
+          <p class='truncate'>{{post.description}}</p>
         </div>
         <br><br>
       </div>
