--- a/templates/posts/posts.html
+++ b/templates/posts/posts.html
@@ -4,7 +4,6 @@
   <div class="row">
     <div class="col s12 m6 offset-m3">
       {% for post in posts %}
-      {{post.pk}}
       <div class="card">
         <div class="card-action">
           <div class="row valing-wrapper">
@@ -32,4 +31,17 @@
       {% endfor %}
     </div>
   </div>
+  <ul class="pagination">
+    {% if page_obj.has_previous %}
+        
+      <li class="waves-effect"><a href="?page={{page_obj.previous_page_number}}"><i class="material-icons">chevron_left</i></a></li>
+    
+    {% endif %}
+    <li class="active"><a href="">{{page_obj.number}} of {{page_obj.paginator.num_pages}}</a></li>
+    {% if page_obj.has_next %}
+        
+      <li class="waves-effect"><a href="?page={{page_obj.next_page_number}}"><i class="material-icons">chevron_right</i></a></li>
+    
+    {% endif %}
+  </ul>
 {% endblock %}
